--- a/src/app/components/w-block/w-block.component.html
+++ b/src/app/components/w-block/w-block.component.html
@@ -1,1 +1,3 @@
-<div class="w-block-component" [ngClass]="{'block':layout=='block'}"></div>
+<div class="w-block-component" [ngClass]="layout" [ngStyle]="style">
+    <label *ngIf="label">{{label}}</label>
+</div>
