--- a/src/app/components/w-block/w-block.component.scss
+++ b/src/app/components/w-block/w-block.component.scss
@@ -1,11 +1,37 @@
 .w-block-component {
-    width: 100%;
-    height: 100%;
-    min-height: 50px;
+  width: 100%;
+  height: 100%;
+  min-height: 50px;
+  position: relative;
 
-    &.block {
-        background-image: url("/assets/brick-texture.jpg");
-        background-size: 100%;
-        background-repeat: repeat;
+  label {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    margin: auto;
+    display: inline-block;
+    height: 1.5em;
+  }
+
+  &.block {
+    background-image: url("/assets/brick-texture.jpg");
+    background-size: 100%;
+    background-repeat: repeat;
+
+    label {
+      color: white;
     }
+  }
+
+  &.target {
+    background-size: 100%;
+    background-repeat: no-repeat;
+
+    label {
+      color: white;
+      background: rgb(0 0 0 / 26%);
+    }
+  }
 }
