ui components enhanced

--- a/src/app/components/agent/agent.component.scss
+++ b/src/app/components/agent/agent.component.scss
@@ -1,7 +1,8 @@
-.agent-component{
+:host {
     background-image: url('/assets/jerry.png');
     background-size: 100%;
     background-repeat: no-repeat;
     width: 24px;
     height: 32px;
+    display: block;
 }
